tests/models/struct/unnamed/i128/fail/validate.rs
use dade::{model, Result};
#[model]
struct TestModel (
   #[field(validate = validate_fn)]
    i128
);
fn main() {}
